# bbox-3mf

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
data/: cube_gears_bb.3mf
src/: boundingbox.cpp
src/utils/: utils.h
